# booktime

./: .gitignore  Pipfile  Readme.md  package-lock.json  package.json  pyproject.toml  webpack-stats.json  webpack.config.js
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  main.yml
booktime/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: imageswitcher.js  imageswitcher.test.js
main/: admin.py  apps.py  consumers.py  endpoints.py  factories.py  forms.py  middlewares.py  models.py  signals.py  urls.py  views.py  widgets.py
main/data/: user_groups.json
main/fixtures/: producttags.json
main/management/commands/: import_data.py
main/migrations/: 0001_initial.py  0002_address.py  0002_productimage.py  0003_basket_basketline.py  0003_producttag.py  0004_order_orderline.py  0004_productimage_thumbnail.py  0005_productname_capitalize.py  0006_auto_20200320_2204.py
main/templates/: about_us.html  address_select.html  base.html  basket.html  chat_room.html  contact_form.html  home.html  invoice.html  login.html  order_done.html  signup.html
main/templates/includes/: field.html
main/templates/main/: address_confirm_delete.html  address_form.html  address_list.html  address_update.html  order_filter.html  product_detail.html  product_list.html
main/templates/widgets/: plusminusnumber.html
main/tests/: test_admin.py  test_command.py  test_e2e.py  test_forms.py  test_models.py  test_signals.py  test_views.py  tests.py
templates/: most_bought_products.html  orders_per_day.html
templates/admin/: base_site.html  change_form.html  index.html
